--- a/libc/Makefile
+++ b/libc/Makefile
@@ -1,6 +1,7 @@
 DEFAULT_HOST:=$(shell ../default-host.sh)
 HOST?=DEFAULT_HOST
 HOSTARCH:=$(shell ../target-triplet-to-arch.sh $(HOST))
+OSNAME=$(shell ../os-name.sh)
 
 CFLAGS?=-O2 -g
 CPPFLAGS?=
